# QIndigoFocuser

./: .gitignore  CMakeLists.txt  README.md
core/: get_time.cc  get_time.h  ssprintf.cc  ssprintf.h
gui/: gui-resources.qrc
gui/qindigo/: QIndigoClient.h  QIndigoFocuserWidget.cc  QIndigoFocuserWidget.h
gui/widgets/: QExpandableGroupBox.cc  QExpandableGroupBox.h  settings.h
src/: MainWindow.cc  MainWindow.h  app-resources.qrc  main.cc
